exports[`Table Column Select renders Checkbox correctly 1`] = `
Array [
  Object {
    "attributes": Object {},
    "children": Array [
      Object {
        "attributes": Object {
          "type": "checkbox",
        },
        "tagName": "input",
        "type": "Element",
      },
    ],
    "tagName": "div",
    "type": "Element",
  },
]
`;

exports[`Table Column Select renders correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "className": Array [
        "uk-table",
      ],
    },
    "children": Array [
      Object {
        "attributes": Object {},
        "tagName": "col",
        "type": "Element",
      },
      Object {
        "attributes": Object {},
        "children": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myHeaderClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "th",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
        ],
        "tagName": "thead",
        "type": "Element",
      },
      Object {
        "attributes": Object {},
        "children": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myCellClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "td",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myCellClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "td",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myCellClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "td",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myCellClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "td",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "myCellClass",
                    "uk-form",
                    "uk-text-center",
                    "vk-table-width-minimum",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "type": "checkbox",
                    },
                    "tagName": "input",
                    "type": "Element",
                  },
                ],
                "tagName": "td",
                "type": "Element",
              },
            ],
            "tagName": "tr",
            "type": "Element",
          },
        ],
        "tagName": "tbody",
        "type": "Element",
      },
    ],
    "tagName": "table",
    "type": "Element",
  },
]
`;
